--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>What, How, Where, and How Well? A Survey on Test-Time Scaling in Large Language Models</title>
+  <title>Trust but Verify! A Survey on Verification Design for Test-time Scaling</title>
   
   <!-- ======== 2. 字体/样式/依赖文件路径 ======== -->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
@@ -48,53 +48,28 @@
                       <div class="container is-max-desktop">
                         <div class="columns is-centered">
                           <div class="column has-text-centered">
-                            <h1 class="title is-1 publication-title"> What, How, Where, and How Well? A Survey on Test-Time Scaling in Large Language Models</h1>
+                            <h1 class="title is-1 publication-title"> Trust but Verify! A Survey on Verification Design for Test-time Scaling</h1>
                             <div class="is-size-5 publication-authors">
                               <!-- Paper authors -->
                               <span class="author-block">
-                                  <a href="#" target="_blank">Qiyuan Zhang</a><sup>+</sup>,</span>
+                                  <a href="#" target="_blank">Venktesh V</a><sup>+</sup>,</span>
                               <span class="author-block">
-                                  <a href="#" target="_blank">Fuyuan Lyu</a><sup>*</sup>,</span>
+                                  <a href="#" target="_blank">Mandeep Rathee</a><sup>*</sup>,</span>
                               <span class="author-block">
-                                  <a href="#" target="_blank">Zexu Sun</a><sup>‡</sup>,</span>
-                              <span class="author-block">
-                                  <a href="#" target="_blank">Lei Wang</a><sup>¶</sup>,</span>
-                              <span class="author-block">
-                                  <a href="#" target="_blank">Weixu Zhang</a><sup>*</sup>,</span>  <!-- 补充链接 -->
-                              <span class="author-block">
-			         <a href="#" target="_blank">Wenyue Hua</a><sup>☆</sup>,</span>  <!-- 补充链接 -->
-                              <span class="author-block">
-				<a href="#" target="_blank">Haolun Wu</a><sup>★</sup>,</span>  <!-- 补充链接 -->
-                              <span class="author-block">
-                                  <a href="#" target="_blank">Zhihan Guo</a><sup>§</sup>,</span>    <!-- 补充链接 -->
-                              <span class="author-block">
-                                  <a href="#" target="_blank">Yufei Wang</a><sup>‖</sup>,</span> <!-- 替换 # -->
-                              <span class="author-block">
-                                  <a href="#" target="_blank">Niklas Muennighoff</a><sup>★</sup>,</span>   <!-- 替换 & -->
-                              <span class="author-block">
-                                  <a href="#" target="_blank">Irwin King</a><sup>§</sup></span>
-			      <span class="author-block">
-                                  <a href="#" target="_blank">Xue Liu</a><sup>*</sup></span>
-                              <span class="author-block">
-                                  <a href="#" target="_blank">Chen Ma</a><sup>+</sup></span>
+                                  <a href="#" target="_blank">Avishek Anand</a><sup>+</sup>,</span>
+
                           </div>
                           
                           <div class="is-size-5 publication-authors">
-                              <span class="author-block">City University of Hong Kong<sup>+</sup>,</span>
-                              <span class="author-block">McGill University & MILA<sup>*</sup>,</span>
-                              <span class="author-block">Gaoling School of Artificial Intelligence, Renmin University of China<sup>‡</sup>,</span> <!-- 替换 # -->
-                              <span class="author-block">Chinese University of Hong Kong<sup>§</sup></span>          <!-- 替换 & -->
-			      <span class="author-block">Salesforce AI Research<sup>¶</sup></span>
-			      <span class="author-block">Macquarie University<sup>‖</sup></span>
-			      <span class="author-block">Stanford University<sup>★</sup></span>
-			      <span class="author-block">University of California, Santa Barbara<sup>☆</sup></span>
+                              <span class="author-block">Delft University of Technology<sup>+</sup>,</span>
+                              <span class="author-block">L3S, Hannover<sup>*</sup>,</span>
                           </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/2503.24235" target="_blank"
+                        <a href="" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -105,7 +80,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/testtimescaling/testtimescaling.github.io" target="_blank"
+                    <a href="https://github.com/elixir-research-group/Verifierstesttimescaling.github.io" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -116,7 +91,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2503.24235" target="_blank"
+                  <a href="" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -125,7 +100,7 @@
                 </a>
               </span>
 
-	      <span class="link-block">
+	      <!-- <span class="link-block">
 		  <a href="https://github.com/zhangqiyuan-rico/zhangqiyuan-rico.github.io/tree/main/TTS" target="_blank"
 		     class="external-link button is-normal is-rounded is-danger">
 		    <span class="icon">
@@ -133,11 +108,11 @@
 		    </span>
 		    <span>PPT</span>
 		  </a>
-		</span>
+		</span> -->
             </div>
 		<!-- 在链接区下面插入图片 -->
 	  <div style="margin-top: 3rem;">
-	    <img src="figs/goku_all.png" alt="Goku All" style="max-width: 800px;">
+	    <img src="figs/Verifier.png" alt="Verifier" style="max-width: 800px;">
 	  </div>
           </div>
         </div>
@@ -172,8 +147,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            As enthusiasm for scaling computation (data and parameters) in the pretraining era gradually diminished, test-time scaling (TTS), also referred to as ``test-time computing'' has emerged as a prominent research focus. Recent studies demonstrate that TTS can further elicit the problem-solving capabilities of large language models (LLMs), enabling significant breakthroughs not only in specialized reasoning tasks, such as mathematics and coding, but also in general tasks like open-ended Q&A. However, despite the explosion of recent efforts in this area, there remains an urgent need for a comprehensive survey offering a systemic understanding. To fill this gap, we propose a unified, multidimensional framework structured along four core dimensions of TTS research: what to scale, how to scale, where to scale, and how well to scale. Building upon this taxonomy, we conduct an extensive review of methods, application scenarios, and assessment aspects, and present an organized decomposition that highlights the unique functional roles of individual techniques within the broader TTS landscape. From this analysis, we distill the major developmental trajectories of TTS to date and offer hands-on guidelines for practical deployment. Furthermore, we identify several open challenges and offer insights into promising future directions, including further scaling, clarifying the functional essence of techniques, generalizing to more tasks, and more attributions.
-          </p>
+            Test-time scaling (TTS) has emerged as a new frontier for scaling the performance of Large Language Models. In test-time scaling, by using more computational resources during inference, LLMs can improve their reasoning process and task performance. Several approaches have emerged for TTS such as distilling reasoning traces from another model or exploring the vast decoding search space by employing a verifier. Employing external verifiers or self-verification is crucial for test-time scaling, as they help guide the search process over large reasoning space. Verification for test-time scaling entails  mechanisms or scoring functions used to evaluate the quality or plausibility of different reasoning paths or solutions from the language model during inference, enabling efficient search or selection among them without access to ground-truth labels.  This paradigm commonly termed has emerged as a superior approach owing to parameter free scaling at inference time and high performance gains. The verifiers could be prompt-based, fine-tuned as a discriminative or generative model to verify process paths, outcomes or both. Despite their widespread adoption, there is no detailed collection, clear categorization and discussion of diverse verification approaches and their training mechanisms. In this survey, we cover the diverse approaches in the literature and present a unified view of verifier training, types and their utility in test-time scaling.          </p>
         </div>
       </div>
     </div>
