--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
 
 
   <!-- ===================== HANDS‑ON GUIDELINES (GitHub Issues) ===================== -->
-  <section id="guidelines" class="section">
+  <section id="issues" class="section">
     <div class="container is-max-desktop">
       <h2 class="title is-3 has-text-centered">Open Hands‑on Guidelines / 开放手册</h2>
       <p class="content has-text-centered" style="margin-bottom: 1.5rem;">
@@ -817,7 +817,7 @@
 	  <span class="icon">
 	    <i class="fab fa-github"></i>
 	  </span>
-	  <span>Submit your Guidelines</span>
+	  <span>Submit your Issues</span>
 	</a>
       </div>
       <!-- 新增：Issues 列表显示区 -->
@@ -854,24 +854,24 @@
 </script>
 <!-- SELECTED TALKS -->
   <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
+    <!-- <div class="container is-max-desktop content">
       <h2 class="title">Talks</h2>
       <iframe width="450" height="235" src="https://player.bilibili.com/player.html?bvid=BV18QVbz7Eq4&high_quality=1&autoplay=0&danmaku=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
       <iframe width="450" height="235" src="https://www.youtube.com/embed/iE6_fC2mjlw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-    </div>
+    </div> -->
   </section>
   <!-- ===================== BIBTEX ===================== -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@misc{zhang2025whathowwherewell,
-      title={What, How, Where, and How Well? A Survey on Test-Time Scaling in Large Language Models}, 
-      author={Qiyuan Zhang and Fuyuan Lyu and Zexu Sun and Lei Wang and Weixu Zhang and Zhihan Guo and Yufei Wang and Niklas Muennighoff and Irwin King and Xue Liu and Chen Ma},
+      title={Trust but Verify! A Survey on Verification Design for Test-time Scaling}, 
+      author={Venktesh V, Mandeep Rathee and Avishek Anand},
       year={2025},
       eprint={2503.24235},
       archivePrefix={arXiv},
       primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2503.24235}, 
+      url={}, 
 }</code></pre>
     </div>
   </section>
@@ -902,9 +902,9 @@ document.addEventListener('DOMContentLoaded', () => {
 <script>
   async function loadIssues() {
     // 1) 替换为你自己的用户名和仓库名
-    const owner = 'testtimescaling';  
-    const repo = 'testtimescaling.github.io';  
-    const label = 'guideline';
+    const owner = 'Verifierstesttimescaling';  
+    const repo = 'Verifierstesttimescaling.github.io';  
+    const label = 'issues';
 
     // 2) GitHub API请求URL，可根据需要添加 state=open / per_page=10 等
     const url = `https://api.github.com/repos/${owner}/${repo}/issues?labels=${label}&state=open&per_page=10`;
