--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
   <!-- ===================== HANDS‑ON GUIDELINES (GitHub Issues) ===================== -->
   <section id="issues" class="section">
     <div class="container is-max-desktop">
-      <h2 class="title is-3 has-text-centered">Open Hands‑on Guidelines / 开放手册</h2>
+      <h2 class="title is-3 has-text-centered">Open Issues</h2>
       <p class="content has-text-centered" style="margin-bottom: 1.5rem;">
       We understand that an individual's strength is limited. I hope our survey provides an open
       and practical platform where everyone can share their experiences in TTS practice within
@@ -812,7 +812,7 @@
       </p>
       <div class="has-text-centered">
         <a class="button is-primary is-rounded"
-	   href="https://github.com/testtimescaling/testtimescaling.github.io/issues/new?labels=guideline"
+	   href="https://github.com/elixir-research-group/Verifierstesttimescaling.github.io/issues/new?labels=guideline"
 	   target="_blank">
 	  <span class="icon">
 	    <i class="fab fa-github"></i>
