--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{zhang2025whathowwherewell,
+      <pre><code>@misc{venkteshvverifiers,
       title={Trust but Verify! A Survey on Verification Design for Test-time Scaling}, 
       author={Venktesh V, Mandeep Rathee and Avishek Anand},
       year={2025},
