--- a/index.html
+++ b/index.html
@@ -166,16 +166,15 @@
         <!-- 轮播项1 -->
         <div class="item">
           <figure class="image-container">
-            <img src="figs/TTS-intro.png" alt="TTS Intro"/>
-            <figcaption class="subtitle is-6">Figure 1: Comparison of Scaling Paradigms in Pre-training and Test-time Phases.</figcaption>
+            <img src="figs/Verifier.png" alt="TTS Intro"/>
+            <figcaption class="subtitle is-6">Figure 1: An overview of Verifier Design and Training Mechanisms.</figcaption>
           </figure>
         </div>
         
-        <!-- 轮播项2 -->
-        <div class="item">
+         <div class="item">
           <figure class="image-container">
-            <img src="figs/TTS-how.png" alt="TTS How"/>
-            <figcaption class="subtitle is-6">Figure 2: A Visual Map and Comparison: From What to Scale to How to Scale.</figcaption>
+            <img src="figs/Verifier-taxonomy.png" alt="TTS How"/>
+            <figcaption class="subtitle is-6">Figure 2: Categorization of Verifier Training Approaches.</figcaption>
           </figure>
         </div>
         
