--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
         <!-- 轮播项1 -->
         <div class="item">
           <figure class="image-container">
-            <img src="figs/Verifier.png" alt="TTS Intro"/>
+            <img src="figs/Verifier.png" alt="TTS Verifiers"/>
             <figcaption class="subtitle is-6">Figure 1: An overview of Verifier Design and Training Mechanisms.</figcaption>
           </figure>
         </div>
         
          <div class="item">
           <figure class="image-container">
-            <img src="figs/Verifier-taxonomy.png" alt="TTS How"/>
+            <img src="figs/Verifier-taxonomy.png" alt="TTS Taxonomy"/>
             <figcaption class="subtitle is-6">Figure 2: Categorization of Verifier Training Approaches.</figcaption>
           </figure>
         </div>
@@ -181,8 +181,8 @@
         <!-- 轮播项3 -->
         <div class="item">
           <figure class="image-container">
-            <img src="figs/taxonomy.png" alt="TTS Taxonomy"/>
-            <figcaption class="subtitle is-6">Figure 3: Taxonomy of research in Test-time Scaling.</figcaption>
+            <img src="figs/evaluation-metrics.png" alt="Evaluation Metrics"/>
+            <figcaption class="subtitle is-6">Figure 3: Evaluation Metrics on Different Verification Benchmarks.</figcaption>
           </figure>
         </div>
 
