--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <p><strong>Sequential scaling</strong>, in contrast, decomposes a
       problem into intermediate steps or sub-questions.
       Each step builds on the previous one, produc-
-      ing a sequence ${sq_1, . . . , sq_T }$ where each sqt =
+      ing a sequence $\{sq_1, . . . , sq_T\}$ where each sqt =
       $LLM(sq_{t−1}, ct)$ depends on the prior reasoning
       step and contextual information ct </p>
 
