--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@
       by varying sampling temperature or prompt exem-
       plars to induce diversity (Levy et al., 2023; Brown
       et al., 2024). These outputs form a candidate set
-      $S = {s1, . . . , sk}$, from which a selection mecha-
-      nism V identifies the final answer $s^∗ = V(S)$.    </p>
+      $S = {s1, . . . , sk}$, from which a selection mechanism V identifies the final answer $s∗ = V(S)$.    </p>
     <p><strong>Sequential scaling</strong>, in contrast, decomposes a
       problem into intermediate steps or sub-questions.
       Each step builds on the previous one, produc-
@@ -267,7 +266,7 @@
       step and contextual information ct </p>
 
     <!-- 2. How to Scale -->
-    <h3 class="title is-4">2. How to Scale</h3>
+    <h3 class="title is-4">2. Verification for Guiding Test-time Scaling</h3>
     <ul style="margin-bottom: 1.5rem;">
       <li>
         <strong>Tuning</strong>
@@ -279,17 +278,14 @@
       <li>
         <strong>Inference</strong>
         <ul>
-          <li><em>Stimulation (STI):</em> It basically stimulates the LLM to generate more and longer samples instead of generating individual samples directly.</li>
-          <li><em>Verification (VER):</em> The verification process plays an important role in TTS, and can be adapted to: 
+          <li><em>Verification:</em> The verification process plays an important role in TTS, and can be adapted to: 
             <ul style="list-style-type: circle; margin-left: 1.5rem;">
-              <li>Directly select the output sample among various ones (Parallel Scaling).</li>
-              <li>Guide the stimulation process and determine when to stop (Sequential Scaling).</li>
-              <li>Serve as the criteria in the search process.</li>
-              <li>Determine what sample to aggregate and how to aggregate them (e.g., weights).</li>
+              <li>Directly select the best output solution among multiple parallel hypothesis generated (Parallel Scaling).</li>
+              <li>Guide the step-by-step reasoning process and determine when to stop to give the final solution (Sequential Scaling).</li>
+              <li>Serve as the criteria or reward signal in the search process.</li>
+              <li>Determine what solutions to aggregate or in selecting the best solution and how to aggregate them (e.g.,as  weights for the reasoning paths).</li>
             </ul>
           </li>
-          <li><em>Search (SEA):</em> Search is a time-tested technique for retrieving relevant information from large databases, and it can also systematically explore the potential outputs of LLMs to improve complex reasoning tasks.</li>
-          <li><em>Aggregation (AGG):</em> Aggregation techniques consolidate multiple solutions into a final decision to enhance the reliability and robustness of model predictions at test time.</li>
         </ul>
       </li>
     </ul>
