--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="is-size-5 publication-authors">
                               <!-- Paper authors -->
                               <span class="author-block">
-                                  <a href="#" target="_blank">Venktesh V</a><sup>+</sup>,</span>
+                                  <a href="#" target="_blank">Venktesh V</a><sup>^</sup>,</span>
                               <span class="author-block">
                                   <a href="#" target="_blank">Mandeep Rathee</a><sup>*</sup>,</span>
                               <span class="author-block">
@@ -61,6 +61,8 @@
                           </div>
                           
                           <div class="is-size-5 publication-authors">
+							<span class="author-block">Stockholm University<sup>+</sup>,</span>
+
                               <span class="author-block">Delft University of Technology<sup>+</sup>,</span>
                               <span class="author-block">L3S, Hannover<sup>*</sup>,</span>
                           </div>
