--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                           </div>
                           
                           <div class="is-size-5 publication-authors">
-							<span class="author-block">Stockholm University<sup>+</sup>,</span>
+							<span class="author-block">Stockholm University<sup>^</sup>,</span>
 
                               <span class="author-block">Delft University of Technology<sup>+</sup>,</span>
                               <span class="author-block">L3S, Hannover<sup>*</sup>,</span>
