--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@
     <!-- 1. What to Scale -->
     <h3 class="title is-4">1. Scaling Paradigms at Inference</h3>
     <p>
-      In <strong>parallel scaling</strong>, the model generates mul-
-      tiple independent outputs simultaneously, often
+      In <strong>parallel scaling</strong>, the model generates multiple independent outputs simultaneously, often
       by varying sampling temperature or prompt exem-
       plars to induce diversity (Levy et al., 2023; Brown
       et al., 2024). These outputs form a candidate set
